# Bread-Engine

./: .gitignore  Bash_Compile_Script_For_Linux.sh  CMakeLists.txt  How_To_Compile_Linux.txt  Makefile  readme.md
dependencies/: benchmark_engine.hpp  bread_engine_core.hpp  core.hpp  misc.hpp  neural_network.hpp  nnue.hpp  nnue_board.hpp  nonsense.hpp  piece_square_tables.hpp  search_board.hpp  sorted_move_gen.hpp  transposition_table.hpp  uci.hpp
dependencies/unit_tests/: nnue_board-tests.hpp  transposition_table-tests.hpp
src/: Bread_engine_core.cpp  benchmark.cpp  benchmark.hpp  benchmark_engine.cpp  bread_engine_core.cpp  constants.hpp  core.cpp  core.hpp  history.cpp  history.hpp  main.cpp  misc.cpp  misc.hpp  nonsense.cpp  nonsense.hpp  piece_square_tables.hpp  run_uci.cpp  search_board.cpp  see.cpp  see.hpp  sorted_move_gen.cpp  sorted_move_gen.hpp  tb.cpp  tb.hpp  transposition_table.cpp  transposition_table.hpp  tune.cpp  tune.hpp  uci.cpp  uci.hpp
src/nnue/: nnue.cpp  nnue.hpp  nnue_board.cpp  nnue_board.hpp  nnue_misc.cpp  nnue_misc.hpp  simd.hpp
utils/: benchmark_engine.cpp  clear_nn_header.cpp  commands copy.txt  commands_copy.txt  data_gen.cpp  generate_nn_header.cpp  nnue_activation_benchmark.cpp  nnue_activation_benchmark_fens.txt  parameter_optimisation.cpp  run_search.cpp  run_uci_search.cpp  unit_tests.cpp
